--- a/css/styles.css
+++ b/css/styles.css
@@ -132,3 +132,14 @@ body {
   width: 100%;
   background-color: transparent;
 }
+
+.mensaje-bienvenida {
+  background-color: #ffe8a3;
+  padding: 10px 20px;
+  margin: 10px auto;
+  font-size: 1.2rem;
+  max-width: 600px;
+  border-left: 5px solid #f0b400;
+  border-radius: 5px;
+  text-align: center;
+}
